docs: expand env example

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,20 @@ TAVILY_API_KEY=xxx
 GROQ_API_KEY=xxx
 PERPLEXITY_API_KEY=xxx
 LINKUP_API_KEY=xxx
+
+# OPENAI_API_BASE=
+# OPENAI_API_VERSION=
+# OPENAI_API_TYPE=
+
+# SUPERVISOR_MODEL=
+# RESEARCHER_MODEL=
+# PLANNER_PROVIDER=
+# PLANNER_MODEL=
+# WRITER_PROVIDER=
+# WRITER_MODEL=
+# SUMMARIZATION_MODEL_PROVIDER=
+# SUMMARIZATION_MODEL=
+
+# SEARCH_API=duckduckgo
+
+# When using Azure OpenAI, model values should reference your Azure deployment name.
